tests/sources/invalid/classes/new_constructor_syntax_errors.fire
// Malformed `new` constructor-call syntax.
copyable class Pair<T, U> {
    first: T;
    second: U;

    fn Pair(first: T, second: U) {
        this.first = first;
        this.second = second;
    }
}

// Unknown type name after 'new'.
a: int32 = 0;
a = new NotAClass();  //~ ERROR FS-PARSE-0012 @9
//~^ ERROR FS-SEM-0010 @9

// Missing '(' after constructor type.
p: Pair<int32, int32> = new Pair<int32, int32>;  //~ ERROR FS-PARSE-0010 @47
//~^ ERROR FS-PARSE-0010 @47

// Malformed generic type-argument list in `new Generic<...>(...)`.
q: Pair<int32, int32> = new Pair<5, int32>(1, 2);  //~ ERROR FS-PARSE-0010 @34
//~^ ERROR FS-PARSE-0010 @34
